# datakit-project

./: .gitignore  .readthedocs.yml  .travis.yml  HISTORY.rst  LICENSE.txt  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cli/: project.py
config/: project.conf
datakit_project/: __init__.py  command_helpers.py  cookiecutters.py  create.py  exceptions.py  help_text.py  project_base.py  prompt.py  repository.py  templates.py  utils.py
datakit_project/commands/: command_helpers.py  create.py  help_text.py  templates.py  templates_update.py
datakit_project/formatters/: templates.py
docs/: Makefile  conf.py  index.rst  install.rst  templates.rst  usage.rst
src/datakit/plugins/: project.py
tests/: conftest.py  helpers.py  test_cookiecutters.py  test_create.py  test_formatters.py  test_prompt.py  test_repository.py  test_templates.py  test_utils.py
tests/commands/: test_create.py  test_create_autogen_plugins_dir.py  test_create_interactive.py  test_parsers.py  test_templates.py  test_templates_status.py  test_templates_update.py
tests/fake-repo/: cookiecutter.json
tests/fake-repo-two/: cookiecutter.json
tests/fake-repo/{{cookiecutter.project_slug}}/: README.md
