[build-system]
requires = ["uv-build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project]
name = "datakit-project"
version = "0.4.0"
description = "A datakit plugin to generate new projects."
authors = [
    {name = "Larry Fenn", email = "lfenn@ap.org"},
]
license = {text = "ISC"}
keywords = ["datakit"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "cliff",
    "cookiecutter>=2.1",
    "datakit-core>=0.5.0",
    "prettytable",
]

[project.urls]
Homepage = "https://github.com/associatedpress/datakit-project"
Source = "https://github.com/associatedpress/datakit-project"
Tracker = "https://github.com/associatedpress/datakit-project/issues"

[project.entry-points."datakit.plugins"]
"project create" = "datakit_project:Create"
"project templates" = "datakit_project:Templates"
"project templates update" = "datakit_project:TemplatesUpdate"

[dependency-groups]
dev = [
    "bumpversion",
    "coverage",
    "ruff",
    "pytest",
    "Sphinx",
    "tox",
    "tox-uv",
    "watchdog",
]

[tool.uv.build-backend]
module-root = ""

[tool.tox]
env_list = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "{posargs}"]]

[tool.ruff]
line-length = 130
exclude = ["docs", "datakit_project/__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
log_level = "INFO"
